Fix search + approve page + css fix
-Fixes the search filters so they can search for tags
-Fixes the designSingle view so no errors appear
-Fixes the css issue where the page has a horizontal scrollbar due to the search filter css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,6 @@ form {
 }
 
 .filter-form {
-    width: 60% !important;
     text-align: center !important;
     margin: 0 auto;
 }
